--- a/index.html
+++ b/index.html
@@ -100,14 +100,16 @@
           <div class="col-md-6 col-lg-4 mb-3">
             <div class="card">
               <div class="card-body text-center p-5">
-                <img src="./assets/avatar.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
-                <h3 class="title card-title mb-3">Nombre y Apellido</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, dolorum. Ea minima ut ratione fugiat
-                  commodi voluptas debitis quae repellendus, asperiores, iste recusandae blanditiis architecto
-                  voluptatum natus laboriosam maxime libero!</p>
+                <img src="./assets/myAvatar.png" alt="avatar" class=" img img-fluid rounded-circle mb-3">
+                <h3 class="title card-title mb-3">Javier Molina</h3>
+                <p>Alumno del curso Full Stack Web Developer dictado por EDEP en conjunto con el Gobierno de la Provincia de Jujuy.<br>Egresado de la carrera Operador de sonido dictado en la ciudad de Rosario, Santa Fé.</p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1 lead"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1 lead"></i></a>
-                <a href="#"><i class="bi bi-github text-dark mx-1 lead"></i></a>
+                <a href="https://www.linkedin.com/in/javier-francisco-molina-225aa3236/">
+                  <i class="bi bi-linkedin text-dark mx-1 lead"></i>
+                </a>
+                <a href="https://jmolina038.github.io/portfolio-template/">
+                  <i class="bi bi-github text-dark mx-1 lead"></i>
+                </a>
               </div>
             </div>
           </div>
