--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
           <div class="col-md-6 col-lg-4 mb-3">
             <div class="card">
               <div class="card-body text-center p-5">
-                <img src="./assets/avatar.png" alt="avatar" class="img img-fluid rounded-circle mb-3">
-                <h3 class="title card-title mb-3">Nombre y Apellido</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, dolorum. Ea minima ut ratione fugiat
-                  commodi voluptas debitis quae repellendus, asperiores, iste recusandae blanditiis architecto
-                  voluptatum natus laboriosam maxime libero!</p>
+                <img src="./assets/avatarKamu.png" alt="avatar" class="img img-fluid rounded-circle mb-3">
+                <h3 class="title card-title mb-3">Diego Ezequiel Nina</h3>
+                <p>Hola mucho gusto, aunque suene redundante, yo soy Diego 😁.
+                  Me gustan el anime, mangas, comics, videojuegos, rompecabezas, sudokus, dibujar, aunque no dibujo mucho ultimamente,
+                  ver series, peliculas, escuchar musica rock, metal...</p>
                 <a href="#"><i class="bi bi-twitter text-dark mx-1 lead"></i></a>
                 <a href="#"><i class="bi bi-linkedin text-dark mx-1 lead"></i></a>
                 <a href="#"><i class="bi bi-github text-dark mx-1 lead"></i></a>
